# vstminihost

./: README
contrib/c++/: README
contrib/c++/minihost/: CMakeLists.txt
contrib/c++/minihost/minihost/: minihost.cpp  minihost.h
contrib/c++/minihost/src/: main.cpp
contrib/c++/minihost/vstsdk2.4/: readme.txt
source/: Makefile  minieditor.cpp  minihost.cpp
